# Chat

./: CMakeLists.txt  README.md
chack_bug_log/: Client_Race_condition.md  Fixing Hiredis Thread-Safety Pitfalls and Memory Corruption.md  Zombie Connection Issue.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: UserModel.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp
include/server/redis/: redis.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: UserModel.cpp  friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp
src/server/redis/: redis.cpp
stress_test/: create_users.py  stress_test  stress_test.cpp
test/testmuduo/: CMakeLists.txt  muduo_server.cpp
